salesforce/force-app/main/default/objects/PSV_Verification__c/PSV_Verification__c.object-meta.xml
<CustomObject>
    <description>Primary source verification result for a credentialing application</description>
    <label>PSV Verification</label>
    <pluralLabel>PSV Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Verification Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>