salesforce/force-app/main/default/objects/PSV_Verification__c/fields/Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Result_Summary__c</fullName>
    <label>Result Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>