salesforce/force-app/main/default/objects/PSV_Verification__c/fields/Retrieved_At__c.field-meta.xml
<CustomField>
    <fullName>Retrieved_At__c</fullName>
    <label>Retrieved At</label>
    <type>DateTime</type>
</CustomField>