salesforce/force-app/main/default/objects/PSV_Verification__c/fields/Source_Mode__c.field-meta.xml
<CustomField>
    <fullName>Source_Mode__c</fullName>
    <label>Source Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>live</fullName><default>false</default><label>LIVE</label></value>
            <value><fullName>poc</fullName><default>false</default><label>POC</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>