salesforce/force-app/main/default/objects/PSV_Verification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>clear</fullName><default>false</default><label>Clear</label></value>
            <value><fullName>pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>exception</fullName><default>false</default><label>Exception</label></value>
            <value><fullName>human_review</fullName><default>false</default><label>Human Review</label></value>
            <value><fullName>not_verified</fullName><default>false</default><label>Not Verified</label></value>
            <value><fullName>failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>