salesforce/force-app/main/default/objects/PSV_Verification__c/fields/Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Verification_Type__c</fullName>
    <label>Verification Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>